# gigecam_linux

./: README.md
CCHVAPI_Ethernet/: CCHVAPI.cpp  CCHVAPI.h  CMakeLists.txt  CMakeLists.txt~  CMakeListsGigeLib.txt  CMakeListsSharedLib.txt  CMakeListsStatic.txt  CMakeListsUseLib.txt  CMakeListscheckcaiqiDemo.txt  CMakeListslib.txt  DeviceGVCP.cpp  DeviceGVCP.h  GigEDataCapture.cpp  GigEDataCapture.h  GigEDataProcess.cpp  GigEDataProcess.h  GigEMutex.h  GigETrigImgPack.h  GigEclientProp.h  GigEimgFrame.h  GigEwqueue.h  TrigImgPack.cpp  Types.h  camProp.cpp  checkCaiqi.cpp  checkCaiqi.h  clientProp.cpp  main.cpp  testCheckCaiqi.cpp  wqueue.cpp
CCHVAPI_Ethernet/Inc/: MVGigEVisionGVCPDefine.h
CCHVAPI_Ethernet/Inc/MV_CrossPlatform/: Linux_Thread.cpp  Linux_Thread.h  MV_CrossPlatformDefine.h  MV_Log.cpp  MV_Memory.cpp  MV_Thread.cpp  Windows_Thread.cpp
CCHVAPI_Ethernet/Inc/Socket/: Socket.cpp  Socket.h
Discovery/: CCHVAPI_Ethernet.rar  CMakeLists.txt  Discovery.sln  UpgradeLog.XML  clean.bat  main.cpp
Discovery/UsbControl/: Ce2Writer.cpp  Ce2Writer.h  MACAddrEdit.cpp  MACAddrEdit.h  OpenCVProc_d.props  OpenCVProc_dx64.props  ScreenShot.cpp  ScreenShot.h  SoftTrigCnt.txt  TrigImgPack.cpp  UsbControl.aps  UsbControl.cpp  UsbControl.h  UsbControl.rc  UsbControl.vcxproj  UsbControl.vcxproj.filters  UsbControlDlg.cpp  UsbControlDlg.h  Utility.h  VideoDataFile.cpp  VideoDataFile.h  VideoDlg.cpp  VideoDlg.h  VirtualDevice.ini  ini.cpp  ini.h  opencv.props  opencv.vsprops  propFromFileExm.cpp  resource.h  stdafx.cpp
